alignmentissue solved

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -148,7 +148,7 @@
   margin-top: 5px;
 }
 .likes-count{
-  font-size: 25px;
+  font-size: 23px;
   letter-spacing: 1px;
 /* color: #d26d01; */
 }
@@ -163,7 +163,7 @@
 .card-username[title] {
   position: relative;
   cursor: pointer;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   margin-top: 5px;
 }
 
